[gd_scene load_steps=11 format=3 uid="uid://dhboyxf4gdyp8"]

[ext_resource type="Texture2D" uid="uid://cxqr02vhderoi" path="res://scenes/game_object/player/Player.png" id="1_62rs6"]
[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_s5kjg"]
[ext_resource type="PackedScene" uid="uid://c42n8wyo8hgel" path="res://scenes/ability/scratch_ability_controller/scratch_ability_controller.tscn" id="2_f28a0"]
[ext_resource type="PackedScene" uid="uid://dqij60m8clcoy" path="res://scenes/component/health_component.tscn" id="2_syr0e"]
[ext_resource type="PackedScene" uid="uid://ipbh4glt34uf" path="res://scenes/ability/tail_ability_controller/tail_ability_controller.tscn" id="4_26m0n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6jpnl"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j0h6e"]
bg_color = Color(0.698039, 0.0627451, 0.188235, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_0k7g3"]
radius = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k4blq"]
radius = 6.36225
height = 26.7794

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ir84"]
radius = 4.375
height = 19.75

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
collision_mask = 2
motion_mode = 1
script = ExtResource("1_s5kjg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer/MarginContainer"]
custom_minimum_size = Vector2(300, 12)
layout_mode = 2
size_flags_horizontal = 0
mouse_filter = 2
theme_override_styles/background = SubResource("StyleBoxFlat_6jpnl")
theme_override_styles/fill = SubResource("StyleBoxFlat_j0h6e")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HealthComponent" parent="." instance=ExtResource("2_syr0e")]

[node name="AbilityManager" type="Node" parent="."]

[node name="ScratchAbilityController" parent="AbilityManager" instance=ExtResource("2_f28a0")]

[node name="TailAbilityController" parent="AbilityManager" instance=ExtResource("4_26m0n")]

[node name="PickupArea2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_0k7g3")

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -6.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_k4blq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_62rs6")
offset = Vector2(0, -7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8ir84")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -6)
position_smoothing_enabled = true
position_smoothing_speed = 16.0

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_entered"]
[connection signal="body_exited" from="CollisionArea2D" to="." method="_on_collision_area_2d_body_exited"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_damage_interval_timer_timeout"]
